# czz

./: .buildinfo  .envrc  .gitignore  .hlint.yaml  Makefile  README.md  README.rst  architecture.html  cabal.project  fuzzing.html  genindex.html  hie.yaml  index.html  objects.inv  overview.html  quickstart.html  scripting.html  search.html  searchindex.js  shell.nix
.github/workflows/: ci.yml
_sources/: architecture.rst.txt  index.rst.txt  overview.rst.txt  quickstart.rst.txt  scripting.rst.txt
_sources/llvm/: model.rst.txt  scripting.rst.txt  status.rst.txt  tui.rst.txt
czz/: czz.cabal
czz-jvm/: czz-jvm.cabal
czz-jvm/exe/: Main.hs
czz-jvm/src/Czz/: JVM.hs
czz-jvm/src/Czz/JVM/: Init.hs  Translate.hs
czz-jvm/src/Czz/JVM/Config/: CLI.hs  Type.hs
czz-jvm/test/: Main.hs  Main.java  Makefile  Test.hs
czz-jvm/test/java/: HelloWorld.java  Makefile  PrintArg0.java
czz-llvm/: czz-llvm.cabal
czz-llvm-tui/: czz-llvm-tui.cabal
czz-llvm-tui/exe/: Main.hs
czz-llvm-tui/src/Czz/LLVM/: TUI.hs
czz-llvm-tui/src/Czz/LLVM/TUI/Config/: CLI.hs  Type.hs
czz-llvm/exe/: Main.hs
czz-llvm/musl/: rand.bc
czz-llvm/src/Czz/: LLVM.hs
czz-llvm/src/Czz/LLVM/: CString.hs  Compile.hs  Env.hs  Feedback.hs  Fuzz.hs  Init.hs  Main.hs  Mutate.hs  Overrides.hs  QQ.hs  Script.hs  Translate.hs  Unimplemented.hs
czz-llvm/src/Czz/LLVM/Config/: CLI.hs  Type.hs
czz-llvm/src/Czz/LLVM/Env/: Args.hs  FileSystem.hs
czz-llvm/src/Czz/LLVM/Overrides/: Env.hs  Errno.hs  Hostname.hs  Libc.hs  Posix.hs  Printf.hs  Signal.hs  Skip.hs  Socket.hs  SymIO.hs  Time.hs  Type.hs  Util.hs
czz-llvm/src/Czz/LLVM/Overrides/Errno/: Values.hs
czz-llvm/src/Czz/LLVM/Overrides/State/: Env.hs
czz-llvm/src/Czz/LLVM/Script/: Config.hs  Fuzz.hs  Overrides.hs  Translate.hs  Val.hs
czz-llvm/test/: Main.hs  Option.hs  Test.hs
czz-llvm/test/c/: .gitignore  Makefile  argv00.c  assert-argc-eq-0.c  assert-argc-geq-0.c  assert-argc-lt-0.c  fopen-fclose-argv0.c  fprintf-stderr-argc.c  getaddrinfo-hints.fail.c  getaddrinfo-hints.fail.out  getaddrinfo.fail.c  getaddrinfo.fail.out  getenv-deref-2.c  getenv-deref.c  getenv-null.c  gettimeofday.fail.c  gettimeofday.fail.czz.out  gettimeofday.fail.out  open-close-argv0.c  printf-argc.c  ret0-envp.c  setenv-getenv.fail.c  setenv-getenv.fail.out  setenv-null-null.fail.c  signal.c  snprintf-0-argc.fail.c  snprintf-1-argc.fail.c  snprintf-2-argc.c  socket-bind.c  sprintf-argc.c  time.fail.c  time.fail.czz.out  time.fail.out  unsetenv-getenv.c  unsetenv-getenv.fail.c  unsetenv-getenv.fail.czz.out  unsetenv-getenv.fail.out  unsetenv-getenv.out  unsetenv-null.c  unsetenv-null.czz.out  (+2 more)
czz/src/Czz/: Count.hs  Coverage.hs  Doc.hs  Freq.hs  Fuzz.hs  KLimited.hs  Log.hs  Now.hs  Orphans.hs  Overrides.hs  Random.hs  Record.hs  Replay.hs  Result.hs  Run.hs  Script.hs  Seed.hs  State.hs  Stop.hs  SysTrace.hs
czz/src/Czz/Concurrent/: Handle.hs  Lock.hs
czz/src/Czz/Config/: CLI.hs  Type.hs
czz/src/Czz/Coverage/: BlockId.hs  Bucket.hs  Feature.hs  Path.hs  Seed.hs
czz/src/Czz/Coverage/Bucket/: Bucketed.hs  Bucketing.hs
czz/src/Czz/Fuzz/: Type.hs
czz/src/Czz/Log/: Concurrent.hs
czz/src/Czz/Mutate/: ByteString.hs  Seq.hs
czz/src/Czz/Script/: API.hs
czz/src/Czz/Script/API/: Config.hs  Fuzz.hs
czz/src/Czz/State/: Stats.hs
doc/: Makefile  architecture.rst  conf.py  fuzzing.rst  index.rst  overview.rst  quickstart.rst  requirements.txt  scripting.rst
doc/jvm/: status.rst
doc/llvm/: config.rst  model.rst  scripting.rst  tui.rst
husk/husk-base/: husk-base.cabal  test.scm
husk/husk-base/exe/: Main.hs
husk/husk-base/src/Language/Scheme/Data/: Maybe.hs  Word.hs
husk/husk-base/test/: Main.hs  Test.hs
husk/husk-base/test/scm/: maybe.good  maybe.scm
husk/husk-bytestring/: husk-bytestring.cabal
husk/husk-bytestring/src/Language/Scheme/: ByteString.hs
husk/husk-cust-func/: husk-cust-func.cabal
husk/husk-cust-func/src/Language/Scheme/: CustFunc.hs  Dyn1.hs  From.hs  Opaque.hs  To.hs
husk/husk-cust-func/test/: Main.hs  Test.hs
husk/husk-interop/: husk-interop.cabal
husk/husk-interop/src/Language/Scheme/Interop/: CustFunc.hs  Dynamic.hs  From.hs  Opaque.hs  Poly.hs  TypeName.hs
husk/husk-interop/src/Language/Scheme/Interop/To/: Func.hs  Val.hs
husk/husk-interop/src/Language/Scheme/Interop/To/Func/: Auto.hs
husk/husk-interop/test/: Test.hs  TestPoly.hs
husk/husk-what4/: husk-what4.cabal
husk/husk-what4/src/Language/Scheme/: What4.hs
jvm/: status.html
libs/dynn/: dynn.cabal
libs/dynn/src/Data/: Dyn1.hs
llvm/: config.html  model.html  scripting.html  status.html  tui.html
scripts/: dist.sh
