cabal-version: 2.2
name: czz-llvm-tui
version: 0.1
author: Langston Barrett
maintainer: Langston Barrett
copyright: (c) Brian Langston Barrett, Inc 2022
license: MIT
license-file: LICENSE
build-type: Simple
category: Language
description: Fuzzing
synopsis: Fuzzing
-- extra-source-files: README.md

common common
  -- Manually list warnings that are errors so that the project doesn't fail to
  -- compile when new warnings are added to -Wall.
  ghc-options:
    -Wall
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=tabs
    -Werror=typed-holes
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind
  ghc-prof-options: -O2 -fprof-auto-top
  default-language: Haskell2010

library
  import: common

  hs-source-dirs: src

  exposed-modules:
    Czz.LLVM.TUI

  build-depends:
    base >= 4.15 && < 4.17,
    brick,
    bytestring,
    containers,
    czz,
    czz-llvm,
    lens,
    -- TODO(lb): Avoid this import
    MissingH >= 1.5 && < 2.0,
    mtl,
    text < 2.0,
    time,
    vty

executable czz-llvm-tui
  import: common
  hs-source-dirs: exe
  main-is: Main.hs

  build-depends:
    base >= 4.8 && < 4.17,
    czz-llvm-tui

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"