cabal-version: 2.2
name: czz-llvm
version: 0.1
author: Langston Barrett
maintainer: Langston Barrett
copyright: (c) Brian Langston Barrett, Inc 2022
license: MIT
license-file: LICENSE
build-type: Simple
category: Language
description: Fuzzing
synopsis: Fuzzing
-- extra-source-files: README.md

data-files:
  musl/*.bc

common common
  -- Manually list warnings that are errors so that the project doesn't fail to
  -- compile when new warnings are added to -Wall.
  ghc-options:
    -Wall
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=tabs
    -Werror=typed-holes
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind
  ghc-prof-options: -O2 -fprof-auto-top -rtsopts
  default-language: Haskell2010

library
  import: common

  hs-source-dirs: src

  exposed-modules:
    Czz.LLVM
    Czz.LLVM.Config.CLI
    Czz.LLVM.CString
    Czz.LLVM.Compile
    Czz.LLVM.Config.Type
    Czz.LLVM.Env
    Czz.LLVM.Env.Args
    Czz.LLVM.Env.FileSystem
    Czz.LLVM.Feedback
    Czz.LLVM.Init
    Czz.LLVM.Mutate
    Czz.LLVM.Overrides
    Czz.LLVM.Overrides.Libc
    Czz.LLVM.Overrides.Posix
    Czz.LLVM.Overrides.Skip
    Czz.LLVM.Overrides.State.Env
    Czz.LLVM.Overrides.SymIO
    Czz.LLVM.Overrides.Util
    Czz.LLVM.QQ
    Czz.LLVM.Translate
    Czz.LLVM.Unimplemented
    Paths_czz_llvm

  autogen-modules:
    Paths_czz_llvm

  build-depends:
    attoparsec,
    base >= 4.15 && < 4.17,
    bv-sized,
    bytestring,
    containers,
    crucible,
    crucible-llvm,
    crucible-symio,
    czz,
    directory,
    filepath >= 1.0,
    hashable,
    lens,
    llvm-pretty,
    llvm-pretty-bc-parser,
    optparse-applicative,
    parameterized-utils,
    process,
    random,
    template-haskell,
    text < 2.0,
    what4,
    unix >= 1.7,
    vector

executable czz-llvm
  import: common
  hs-source-dirs: exe
  main-is: Main.hs

  build-depends:
    base >= 4.8 && < 4.17,
    czz-llvm

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

test-suite czz-llvm-test
  import: common
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Option
    Test

  build-depends:
    base,
    czz,
    czz-llvm,
    tasty >= 1.4 && < 2.0,
    tasty-hunit >= 0.10 && < 1.0,
    text
