cabal-version: 2.2
name: czz
version: 0.1
author: Langston Barrett
maintainer: Langston Barrett
copyright: (c) Brian Langston Barrett, Inc 2022
license: MIT
license-file: LICENSE
build-type: Simple
category: Language
description: Fuzzing
synopsis: Fuzzing
-- extra-source-files: README.md

common common
  -- Manually list warnings that are errors so that the project doesn't fail to
  -- compile when new warnings are added to -Wall.
  ghc-options:
    -Wall
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=tabs
    -Werror=typed-holes
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind
  ghc-prof-options: -O2 -fprof-auto-top -rtsopts
  default-language: Haskell2010

library
  import: common

  hs-source-dirs: src

  exposed-modules:
    Czz.Coverage
    Czz.Coverage.BlockId
    Czz.Coverage.Path
    Czz.Config.CLI
    Czz.Config.Type
    Czz.Concurrent.Lock
    Czz.Concurrent.Handle
    Czz.Count
    Czz.Freq
    Czz.Fuzz
    Czz.Fuzz.Type
    Czz.KLimited
    Czz.Log
    Czz.Log.Concurrent
    Czz.Mutate.ByteString
    Czz.Mutate.Seq
    Czz.Now
    Czz.Overrides
    Czz.Random
    Czz.Record
    Czz.Result
    Czz.Seed
    Czz.State
    Czz.State.Stats
    Czz.SysTrace

  -- other-modules:
  --   Paths_czz

  -- autogen-modules:
  --   Paths_czz

  build-depends:
    aeson >= 2.0 && < 3.0,
    base >= 4.15 && < 4.17,
    bytestring,
    co-log-core > 0.3 && < 0.4,
    containers,
    crucible,
    lens >= 5 && < 6,
    hashable,
    optparse-applicative,
    parameterized-utils >= 2 && < 3,
    random,
    stm,
    text,
    time,
    what4 >= 1 && < 2,
    vector