cabal-version: 2.2
name: czz
version: 0.1
author: Langston Barrett
maintainer: Langston Barrett
copyright: (c) Brian Langston Barrett, Inc 2022
license: MIT
license-file: LICENSE
build-type: Simple
category: Language
description: Fuzzing
synopsis: Fuzzing
-- extra-source-files: README.md

common common
  -- Manually list warnings that are errors so that the project doesn't fail to
  -- compile when new warnings are added to -Wall.
  ghc-options:
    -Wall
    -Werror=deferred-type-errors
    -Werror=deprecated-flags
    -Werror=deprecations
    -Werror=deriving-defaults
    -Werror=dodgy-foreign-imports
    -Werror=duplicate-exports
    -Werror=empty-enumerations
    -Werror=identities
    -Werror=inaccessible-code
    -Werror=incomplete-patterns
    -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns
    -Werror=inline-rule-shadowing
    -Werror=missed-extra-shared-lib
    -Werror=missing-exported-signatures
    -Werror=missing-fields
    -Werror=missing-home-modules
    -Werror=missing-methods
    -Werror=overflowed-literals
    -Werror=overlapping-patterns
    -Werror=partial-fields
    -Werror=partial-type-signatures
    -Werror=simplifiable-class-constraints
    -Werror=star-binder
    -Werror=tabs
    -Werror=typed-holes
    -Werror=unrecognised-pragmas
    -Werror=unrecognised-warning-flags
    -Werror=unsupported-calling-conventions
    -Werror=unsupported-llvm-version
    -Werror=unticked-promoted-constructors
    -Werror=unused-imports
    -Werror=warnings-deprecations
    -Werror=wrong-do-bind
  ghc-prof-options: -O2 -fprof-auto-top -rtsopts
  default-language: Haskell2010

library
  import: common

  hs-source-dirs: src

  exposed-modules:
    Czz.Coverage.BlockId
    Czz.Coverage.Bucket.Bucketed
    Czz.Coverage.Bucket.Bucketing
    Czz.Coverage.Feature
    Czz.Coverage.Path
    Czz.Coverage.Seed
    Czz.Config.CLI
    Czz.Config.Type
    Czz.Concurrent.Lock
    Czz.Concurrent.Handle
    Czz.Count
    Czz.Doc
    Czz.Freq
    Czz.Fuzz
    Czz.Fuzz.Type
    Czz.KLimited
    Czz.Log
    Czz.Log.Concurrent
    Czz.Mutate.ByteString
    Czz.Mutate.Seq
    Czz.Now
    Czz.Orphans
    Czz.Overrides
    Czz.Random
    Czz.Record
    Czz.Result
    Czz.Run
    Czz.Script
    Czz.Script.API
    Czz.Script.API.Config
    Czz.Script.API.Fuzz
    Czz.Seed
    Czz.State
    Czz.State.Stats
    Czz.Stop
    Czz.SysTrace

  -- other-modules:
  --   Paths_czz

  -- autogen-modules:
  --   Paths_czz

  build-depends:
    aeson >= 2.0 && < 3.0,
    base >= 4.13 && < 4.17,
    base64-bytestring,
    bytestring,
    co-log-core > 0.3 && < 0.4,
    containers,
    crucible,
    directory,
    filepath >= 1.0 && < 2.0,
    lens >= 5 && < 6,
    mtl,
    hashable,
    husk-base,
    husk-bytestring,
    husk-cust-func,
    husk-scheme,
    husk-what4,
    optparse-applicative,
    parameterized-utils >= 2 && < 3,
    random,
    stm,
    text,
    time,
    what4 >= 1 && < 2,
    unix >= 2.7,
    vector